<resources>
    <string name="app_name">GoTouch</string>
    <string name="tagline">NEVER MIND YOUR PHONE</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>


    <string name="name">Customer Name*</string>
    <string name="contact">Contact No*</string>
    <string name="model">Mobile Model*</string>
    <string name="imei">IMEI*</string>
    <string name="mobile_photo">Mobile Photo*</string>
    <string name="invoice_photo">Invoice Photo*</string>
    <string name="customer_id">Customer Id Proof*</string>
    <string name="submit">Submit</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="tab_text_1">Register</string>
    <string name="tab_text_2">Search</string>
</resources>
